<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_quiz"
    tools:context=".ReviewActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:title="@null"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:id="@+id/Background_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_left_arrow">

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20">

            </TextView>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:elevation="10dp"
            app:cardCornerRadius="15dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">


                        <TextView
                            style="@style/question_textviews"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/question_1" />

                        <TextView
                            android:id="@+id/text_ans1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Correct Answer: New Zealand"
                            android:textColor="@color/colorBlack">

                        </TextView>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/colorPrimaryDark">

                        </View>

                        <TextView
                            style="@style/question_textviews"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/question_2" />

                        <TextView
                            android:id="@+id/text_ans2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Correct Answer: 5"
                            android:textColor="@color/colorBlack">

                        </TextView>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/colorPrimaryDark">

                        </View>

                        <TextView
                            style="@style/question_textviews"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/question_3" />

                        <TextView
                            android:id="@+id/text_ans3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Correct Answer: Mushrooms"
                            android:textColor="@color/colorBlack">

                        </TextView>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/colorPrimaryDark">

                        </View>

                        <TextView
                            style="@style/question_textviews"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/question_4" />

                        <TextView
                            android:id="@+id/text_ans4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Correct Answer: Strawberries"
                            android:textColor="@color/colorBlack">

                        </TextView>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1sp"
                            android:layout_marginTop="10dp"
                            android:background="@color/colorPrimaryDark">

                        </View>

                        <TextView
                            style="@style/question_textviews"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/question_5" />

                        <TextView
                            android:id="@+id/text_ans5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Correct Answer: Barad Dur"
                            android:textColor="@color/colorBlack">

                        </TextView>

                    </LinearLayout>

                    <Button
                        android:id="@+id/Home_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_blue_btn"
                        android:padding="10dp"
                        android:text="@string/home"
                        android:textColor="@color/white">

                    </Button>
                </LinearLayout>

            </ScrollView>
        </android.support.v7.widget.CardView>
    </LinearLayout>


</LinearLayout>